# py-plugin-sdk

./: .gitignore  INSTALL.md  LICENSE  MANIFEST.in  PACKAGE_GUIDE.md  README-VIBE-CODE.md  README.md  README_PYTHON.md  STRUCTURE.md  main_test.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: publish.yml
pysdk/: README.md  __init__.py  events.py  plugin.py  sorenv.py
pysdk/models/: __init__.py  models.py  types.py
